[package]
name = "simple-xlsx-writer"
version = "0.1.1"
edition = "2021"
description = "A simple and memory efficient XLSX writer"
license = "MIT OR Apache-2.0"
readme = "readme.md"
keywords = ["excel", "xlsx", "office"]
categories = ["encoding", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
calamine = "0.19"